service-section-added

--- a/index.html
+++ b/index.html
@@ -78,25 +78,42 @@
             </article>
         </section>
         <section class="services-section">
-            <article>
+            <article >
                 <h3>Services</h3>
                 <p>Discover the unique services I offer, from bespoke web design to comprehensive development solutions. Each project is tailored to meet your specific needs, ensuring a seamless and effective online presence.</p>
                 <img src="../Option 1/Assets/Images/angela yu.jpg"alt="">
             </article>
+            <article>
+                <div class="image-div">
+                    <img src="./Assets/Beautiful me/Snapchat-1076926368.jpg" alt="my-pic">
+                </div>
+                <div class="services-list">
+                    <div>
+                        <h4>Custom Web Development</h4>
+                        <p>I create customized websites that perfectly match what your business needs. Whether you need a simple informational site or a complex web application, I ensure it’s tailored just for you.</p>
+                    </div>
+                    <div>
+                        <h4>Responsive Design</h4>
+                        <p>I design websites that automatically adjust and look good on all devices, from smartphones to desktop computers. This means your customers will have a great experience no matter how they visit your site.</p>  
+                    </div>
+                    <div>
+                        <h4>Performance Optimization</h4>
+                        <p>I make your website faster by optimizing images, code, and server settings. A fast website keeps visitors happy and can help improve your ranking on search engines like Google.</p>
+                    </div>
+                </div>
+            </article>
         </section>
-        <section class="services">
+        <!-- <section class="services">
             <h2>My Services</h2>
             <div class="services-list">
                 <div class="service-card">
                     <div class="service-icon">🌐</div>
-                    <h3>Custom Web Development</h3>
-                    <p>I create customized websites that perfectly match what your business needs. Whether you need a simple informational site or a complex web application, I ensure it’s tailored just for you.</p>
+                    
                     <button>Learn More</button>
                 </div>
                 <div class="service-card">
                     <div class="service-icon">📱</div>
-                    <h3>Responsive Design</h3>
-                    <p>I design websites that automatically adjust and look good on all devices, from smartphones to desktop computers. This means your customers will have a great experience no matter how they visit your site.</p>
+                    
                     <button>Learn More</button>
                 </div>
                 <div class="service-card">
@@ -113,7 +130,7 @@
                 </div>
                 <!-- Add more service cards as needed -->
             </div>
-        </section>
+        </section> -->
     </main>
 </body>
 </html>
