--- a/index.html
+++ b/index.html
@@ -89,16 +89,22 @@
                 </div>
                 <div class="services-list">
                     <div>
-                        <h4>Custom Web Development</h4>
+                        <h4><a>Custom Web Development</a></h4>
                         <p>I create customized websites that perfectly match what your business needs. Whether you need a simple informational site or a complex web application, I ensure it’s tailored just for you.</p>
                     </div>
                     <div>
-                        <h4>Responsive Design</h4>
+                        <h4><a>Responsive Design</a></h4>
                         <p>I design websites that automatically adjust and look good on all devices, from smartphones to desktop computers. This means your customers will have a great experience no matter how they visit your site.</p>  
                     </div>
                     <div>
-                        <h4>Performance Optimization</h4>
+                        <h4><a>Performance Optimization</a></h4>
                         <p>I make your website faster by optimizing images, code, and server settings. A fast website keeps visitors happy and can help improve your ranking on search engines like Google.</p>
+                    </div>
+                    <div class="button">
+                        <a href="#" class="read-more">
+                            <span>Read more</span>
+                            <img src="Assets/images/Arrow 1.svg" alt="read-more-arrow">
+                        </a>
                     </div>
                 </div>
             </article>
