contact-section added

--- a/index.html
+++ b/index.html
@@ -83,7 +83,6 @@
             <article >
                 <h3>Services</h3>
                 <p>Discover the unique services I offer, from bespoke web design to comprehensive development solutions. Each project is tailored to meet your specific needs, ensuring a seamless and effective online presence.</p>
-                <img src="../Option 1/Assets/Images/angela yu.jpg"alt="">
             </article>
             <article>
                 <div class="image-div">
@@ -120,21 +119,29 @@
             </div>
             <div class="project-grid">
                 <a href="#">
-                    <img src="Assets/images/Fauxia-homepage.jpg" alt="project2-pic-demo">
-                </a>
-                <a href="#">
                     <img src="./Assets/images/contact-Fauxia.jpg" alt="project1-pic-demo">
                 </a>
                 <a href="#">
-                    <img src="Assets/images/request-with-confidence.jpg" alt="project3-pic-demo">
+                    <img src="Assets/images/Hero Placeholder.png" alt="project3-pic-demo">
                 </a>
-                
                 <a href="#">
                     <img src="Assets/images/Fauxia-homepage.jpg" alt="project5-pic-demo">
                 </a>
+                <a href="#">
+                    <img src="Assets/images/signup page.png" alt="project5-pic-demo">
+                </a>
             </div>
         </section>
-        
+        <section class="contact-section">
+            <div>
+                <h5>Have a project in mind? Let's bring your vision to life. </h5>
+            </div>
+            <div>
+                <a href="#">
+                    <button>Let's Talk</button>
+                </a>
+            </div>
+        </section>
     </main>
 </body>
 </html>
