--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         <section class="projects-section">
             <div>
                 <p>Discover my diverse range of projects, and find inspiration in what i've created.</p>
-                <a href="#">
+                <a href="#" class="">
                     <button>See More</button>
                 </a>
             </div>
@@ -142,6 +142,137 @@
                 </a>
             </div>
         </section>
+        <section class="blog-section">
+            <div class="blog-intro-content">
+                <h2>Explore My Blog</h2>
+                <p>Dive into my latest posts, insights, and stories. Stay updated with the trends and expand your knowledge.</p>
+                <a href="blog.html" class="blog-button">Read More</a>
+            </div>
+        </section>
     </main>
+    <!-- <footer class="footer">
+        <div class="footer-content">
+            <div class="footer-logo">
+                <a href="#">
+                    <img src="path/to/logo.png" alt="Logo">
+                </a>
+            </div>
+            <div class="footer-nav">
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Skills and Tools</a></li>
+                    <li><a href="#">Projects</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+            </div>
+            <div class="social-media">
+                <ul>
+                    <li><a href="#"><img src="path/to/facebook-icon.png" alt="Facebook"></a></li>
+                    <li><a href="#"><img src="path/to/twitter-icon.png" alt="Twitter"></a></li>
+                    <li><a href="#"><img src="path/to/instagram-icon.png" alt="Instagram"></a></li>
+                    <!-- Add more social media icons here -->
+              <!--  </ul>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            <p>&copy; 2024 Sultanat. All rights reserved.</p>
+        </div>
+    </footer> -->
+    <footer class="pt-[3.4rem] px-[4.1rem] w-[100vw] h-[38.31rem] bg-[#6F3891] lg:flex hidden flex-col ">
+        <img src="./Assets/contact-page-images/footer-logo.svg" alt="hersaferide-logo" class="w-[13.3rem] h-[3.09rem]  gap-[0.8rem]">
+        <p class="w-[9.4rem] h-[1.7rem] font-[Onest] font-[700] text-[1.03rem] text-[#FFFFFF] mt-[1.9rem] mb-[0.9rem] ml-[2.19rem]">Visit Help Center</p>
+        <article class="flex flex-row">
+                <ul class="flex flex-row items-start ml-[2.19rem] ">
+                    <div class="flex flex-col mr-[9.9rem]">
+                        <div class=" w-[10.5rem] h-[11.31rem]  mb-[3.97rem]">
+                            <li class="font-[700] text-[1.25rem] leading-[1.6rem]  text-[#FFFFFF]">Company</li>
+                            <a href="index.html">
+                                <li class=" font-[400] text-[0.875rem] leading-[1.1rem] text-[#F9B5FF] my-[1.3rem] block">Home</li>
+                            </a>
+                            <a href="about.html">
+                                <li class="font-[400] text-[0.875rem] leading-[1.1rem] text-[#F9B5FF] my-[1.3rem]block">About us</li>
+                            </a>
+                            <a href="about.html#mission">
+                                <li class="font-[400] text-[0.875rem] leading-[1.1rem] text-[#F9B5FF] my-[1.3rem] block">Mission & Vision</li>
+                            </a>
+                            <a href="./about.html#Team-Members">
+                                <li class=" w-[10.5rem] font-[400] text-[0.875rem] leading-[1.1rem] text-[#F9B5FF] mt-[1.3rem] block"> Meet The Team Members</li>
+                            </a>
+                        </div>
+                        <div class="flex mb-[3.01rem]">
+                            <a href="https://www.instagram.com/webfalainitiative?igsh=MzRIODBINWFIZA==" target="_blank">
+                                <img src="../Assets/Images/instagram.svg" alt="instagram-icon" class="mr-[1.2rem]">
+                            </a>
+                            <a href="https://www.facebook.com/webfalainitiative?mibextid=LQQj4d" target="_blank">
+                                <img src="../Assets/Images/facebook.svg" alt="facebook-icon" class="mr-[1.2rem]">
+                            </a>
+                            <a href="https://x.com/webfalainitiat1" target="_blank" >
+                                <img src="../Assets/Images/twitter.svg" alt="twitter-icon" class="mr-[1.2rem]" >
+                            </a>
+                            <a href="https://whatsapp.com/channel/0.029Va9l8fsJJhzTUTdFsp1q" target="_blank" >
+                                <img src="../Assets/Images/youtube.svg" alt="youtube-icon" class="mr-[1.2rem]" >
+                            </a>
+                            <a href="#">
+                                <img src="../Assets/Images/linkdin.svg" alt="linkdin-icon">
+                            </a>
+                        </div>
+                        <div>
+                            <img src="Assets/Images/ph_copyright.svg" alt="copyright-icon" class="inline">
+                            <a href="" class="font-[400] text-[0.75rem] text-[#FCFCFC] ">HerSafeRideteam2024</a>
+                        </div>
+                    </div>
+                    <div class="flex flex-col mr-[3.6rem] w-[9.43rem]">
+                        <div>
+                            <li class="font-[700] text-[1.25rem] leading-[1.6rem]  text-[#FFFFFF]">Support</li>
+                            <a href="help.html">
+                                <li class=" font-[400] text-[0.875rem] leading-[1.1rem] text-[#F9B5FF] my-[1.3rem] block">Help</li>
+                            </a>
+                            <a href="emerg.html">
+                                <li class="font-[400] text-[0.875rem] leading-[1.1rem] text-[#F9B5FF] my-[1.3rem] block w-[9.43rem]">Emergency Assistance</li>
+                            </a>
+                        </div>
+                        <div>
+                            <li class="font-[700] text-[1.25rem] leading-[1.6rem]  text-[#FFFFFF]">Safety</li>
+                            <a href="blog.html#driversafety">
+                                <li class=" font-[400] text-[0.875rem] leading-[1.1rem] text-[#F9B5FF] my-[1.3rem] block">Driver Safety</li>
+                            </a>
+                            <a href="blog.html#Hersafety">
+                                <li class="font-[400] text-[0.875rem] leading-[1.1rem] text-[#F9B5FF] my-[1.3rem] block ">Her Safety</li>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="w-[12.25rem] flex flex-col mr-[4.8rem]">
+                        <div class="mb-[1.9rem]">
+                            <li class="font-[700] text-[1.25rem] leading-[1.6rem]  text-[#FFFFFF]">Contact us</li>
+                            <li class=" font-[400] text-[0.875rem] leading-[1.1rem] text-[#F9B5FF] my-[1.3rem] block">The City of Refuge: No 14, Station Road, Along Royalty Hotel, GRA Ilorin, Kwara State.</li>
+                            <a href="tel:+234 703 567 2222"></a>
+                                <li class="font-[400] text-[0.875rem] leading-[1.1rem] text-[#F9B5FF] my-[1.3rem] block">+234 703 567 2222</li>
+                            </a>
+                            <a href="mailto:support@hersaferide.com">
+                                <li class="font-[400] text-[0.875rem] leading-[1.1rem] text-[#F9B5FF] my-[1.3rem] block">support@hersaferide.com</li>
+                            </a>
+                        </div>
+                        <div>
+                            <a href="#">
+                                <img src="./Assets/Images/play-store.svg" alt="google-play" class="mb-[0.3rem]">
+                            </a>
+                            <a href="#">
+                                <img src="Assets/Images/apple-store.svg" alt="google-play" class="">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="">
+                        <li class="w-[19.9rem] h-[2.1rem] font-[700] text-[1.3rem] mb-[0.6rem] text-[#FFFFFF]">Sign up for Our Newsletters</li>
+                        <form action="#" class="w-[25.5rem] h-[2.25rem] rounded-[0.6rem] pl-[1.2rem] pr-[0.25rem] py-[0.375rem] bg-[#FFFFFF] flex flex-row">
+                            <input type="email" placeholder="Enter your email address" class="w-[14.9rem] h-[1.6rem]font-[400] text-[0.9rem] mr-[4.06rem] text-[#BFBEBE] required:">
+                            <a href="#" class="w-[5.125rem] h-[1.625rem] rounded-[0.36rem] bg-[#6F3891] pt-[0.04rem] pl-[1.2rem]">
+                                <button class="w-[2.4rem] h-[0.8rem] font-[700] text-[0.6rem] text-[#FFFFFF]">Sign Up</button>
+                            </a>
+                        </form>
+                    </div>
+                </ul>
+        </article>
+    </footer>
 </body>
 </html>
