--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             </article>
             <article>
                 <div class="image-div">
-                    <img src="./Assets/Beautiful me/Snapchat-1076926368.jpg" alt="my-pic">
+                    <img src="./Assets/Beautiful me/laugh.jpg" alt="my-pic">
                 </div>
                 <div class="services-list">
                     <div>
@@ -180,8 +180,7 @@
         </div>
     </footer> -->
     <footer class="pt-[3.4rem] px-[4.1rem] w-[100vw] h-[38.31rem] bg-[#6F3891] lg:flex hidden flex-col ">
-        <img src="./Assets/contact-page-images/footer-logo.svg" alt="hersaferide-logo" class="w-[13.3rem] h-[3.09rem]  gap-[0.8rem]">
-        <p class="w-[9.4rem] h-[1.7rem] font-[Onest] font-[700] text-[1.03rem] text-[#FFFFFF] mt-[1.9rem] mb-[0.9rem] ml-[2.19rem]">Visit Help Center</p>
+        <p class=" logo">Sultanat</p>
         <article class="flex flex-row">
                 <ul class="flex flex-row items-start ml-[2.19rem] ">
                     <div class="flex flex-col mr-[9.9rem]">
@@ -202,19 +201,19 @@
                         </div>
                         <div class="flex mb-[3.01rem]">
                             <a href="https://www.instagram.com/webfalainitiative?igsh=MzRIODBINWFIZA==" target="_blank">
-                                <img src="../Assets/Images/instagram.svg" alt="instagram-icon" class="mr-[1.2rem]">
+                                <img src="./Assets/Icons/purple-instagram-icon.svg" alt="instagram-icon" class="mr-[1.2rem]">
                             </a>
                             <a href="https://www.facebook.com/webfalainitiative?mibextid=LQQj4d" target="_blank">
-                                <img src="../Assets/Images/facebook.svg" alt="facebook-icon" class="mr-[1.2rem]">
+                                <img src="./Assets/Icons/purple-facebook-icon.svg" alt="facebook-icon" class="mr-[1.2rem]">
                             </a>
                             <a href="https://x.com/webfalainitiat1" target="_blank" >
-                                <img src="../Assets/Images/twitter.svg" alt="twitter-icon" class="mr-[1.2rem]" >
+                                <img src="Assets/Icons/purple-twitter-icon.svg" alt="twitter-icon" class="mr-[1.2rem]" >
                             </a>
                             <a href="https://whatsapp.com/channel/0.029Va9l8fsJJhzTUTdFsp1q" target="_blank" >
-                                <img src="../Assets/Images/youtube.svg" alt="youtube-icon" class="mr-[1.2rem]" >
+                                <img src="Assets/Icons/purple-youtube-icon.svg" alt="youtube-icon" class="mr-[1.2rem]" >
                             </a>
                             <a href="#">
-                                <img src="../Assets/Images/linkdin.svg" alt="linkdin-icon">
+                                <img src="Assets/Icons/purple-twitter-icon.svg" alt="linkdin-icon">
                             </a>
                         </div>
                         <div>
